--- a/headscan/requirements.txt
+++ b/headscan/requirements.txt
@@ -1,9 +1,11 @@
 
-# Minimum required versions
-pywebio>=1.7.0
-requests>=2.26.0
-shodan>=1.27.0
 
-# Optional dependencies (uncomment if needed)
-# python-dotenv>=0.19.0  # For environment variable support
-# colorama>=0.4.4        # For colored console output
+pywebio==1.8.2
+requests==2.28.1
+shodan==1.29.1
+
+# Development extras (install with pip install -r requirements.txt[dev])
+[dev]
+pytest==7.2.0
+black==22.12.0
+flake8==5.0.4
